FIX: modify the translation
Change-Id: If20d4acaa730b7802c4faa2e97abf60cd75624d5

--- a/bbl/i18n/zh_cn/BambuStudio_zh_CN.po
+++ b/bbl/i18n/zh_cn/BambuStudio_zh_CN.po
@@ -6,8 +6,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Slic3rPE\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2022-09-09 09:54+0800\n"
-"PO-Revision-Date: 2022-09-09 09:57+0800\n"
+"POT-Creation-Date: 2022-09-09 11:50+0800\n"
+"PO-Revision-Date: 2022-09-05 14:22+0800\n"
 "Last-Translator: Jiang Yue <maze1024@gmail.com>\n"
 "Language-Team: \n"
 "Language: zh_CN\n"
@@ -2634,7 +2634,7 @@ msgid "Downloading..."
 msgstr "下载中..."
 
 msgid "This only takes effect during printing"
-msgstr ""
+msgstr "仅在打印过程中生效"
 
 msgid "Silent"
 msgstr "静音"
@@ -4338,7 +4338,7 @@ msgid "New version of Bambu Studio"
 msgstr "新版本的Bambu Studio"
 
 msgid "Don't remind me of this version again"
-msgstr "此版本不在提示"
+msgstr "此版本不再提示"
 
 msgid "Saving objects into the 3mf failed."
 msgstr "保存对象到3mf失败。"
@@ -5868,12 +5868,16 @@ msgid ""
 "process of taking a snapshot, prime tower is required for smooth mode to "
 "wipe nozzle."
 msgstr ""
+"如果启用平滑模式或者传统模式，将在每次打印时生成延时摄影视频。打印完每层后，"
+"将用内置相机拍摄快照。打印完成后，所有这些快照会组合成一个延时视频。如果启用"
+"平滑模式，打印完每层后，工具头将移动到吐料槽，然后拍摄快照。由于平滑模式在拍"
+"摄快照的过程中熔丝可能会从喷嘴中泄漏，因此需要使用擦拭塔进行喷嘴擦拭。"
 
 msgid "Smooth"
-msgstr "平滑"
+msgstr "平滑模式"
 
 msgid "Traditional"
-msgstr ""
+msgstr "传统模式"
 
 msgid "Temperature variation"
 msgstr "软化温度"
@@ -6412,28 +6416,6 @@ msgstr "支撑：正在修补层%d的空洞"
 #, c-format, boost-format
 msgid "Support: propagate branches at layer %d"
 msgstr "支撑：正在生长层%d的树枝"
-
-#~ msgid ""
-#~ "If enabled, a timelapse video will be generated for each print. After "
-#~ "each layer is printed, the toolhead will move to the excess chute, and "
-#~ "then a snapshot is taken with the chamber camera. All of these snapshots "
-#~ "are composed into a timelapse video when printing completes. Since the "
-#~ "melt filament may leak from the nozzle during the process of taking a "
-#~ "snapshot, prime tower is required for nozzle priming."
-#~ msgstr ""
-#~ "如果启用延时摄影，将在每次打印时生成延时摄影视频。打印完每层后，工具头将移"
-#~ "动到吐料槽，然后用内置相机拍摄快照。打印完成后，所有这些快照会组合成一个延"
-#~ "时视频。由于在拍摄快照的过程中熔丝可能会从喷嘴中泄漏，因此需要使用擦拭塔进"
-#~ "行喷嘴擦拭。"
-
-#~ msgid "Please Fill Task Report."
-#~ msgstr "请填写打印报告"
-
-#~ msgid "Enter a search term"
-#~ msgstr "输入搜索内容"
-
-#~ msgid "Debug"
-#~ msgstr "调试"
 
 #~ msgid "Waiting"
 #~ msgstr "等待中"
