--- a/bbl/i18n/en/BambuStudio_en.po
+++ b/bbl/i18n/en/BambuStudio_en.po
@@ -2,7 +2,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Bambu Studio\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2022-09-14 12:48+0800\n"
+"POT-Creation-Date: 2022-09-14 17:04+0800\n"
 "Language: en\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -678,11 +678,17 @@ msgstr "Fix Model"
 msgid "Export as STL"
 msgstr "Export as STL"
 
-msgid "Reload item"
-msgstr "Reload item"
+msgid "Reload from disk"
+msgstr ""
 
-msgid "Reload items"
-msgstr "Reload items"
+msgid "Reload the selected parts from disk"
+msgstr ""
+
+msgid "Replace with STL"
+msgstr ""
+
+msgid "Replace the selected part with new STL"
+msgstr ""
 
 msgid "Change filament"
 msgstr "Change filament"
@@ -3040,6 +3046,15 @@ msgstr ""
 msgid "Object too small"
 msgstr "Object too small"
 
+msgid ""
+"This file contains several objects positioned at multiple heights.\n"
+"Instead of considering them as multiple objects, should \n"
+"the file be loaded as a single object having multiple parts?"
+msgstr ""
+
+msgid "Multi-part object detected"
+msgstr ""
+
 msgid "Load these files as a single object with multiple parts?\n"
 msgstr "Load these files as a single object with multiple parts?\n"
 
@@ -3068,6 +3083,15 @@ msgstr "The selected object couldn't be split."
 
 msgid "Another export job is running."
 msgstr "Another export job is running."
+
+msgid "Select a new file"
+msgstr ""
+
+msgid "File for the replace wasn't selected"
+msgstr ""
+
+msgid "Error during replace"
+msgstr ""
 
 msgid "Please select a file"
 msgstr "Please select a file"
@@ -4715,6 +4739,11 @@ msgstr ""
 
 msgid "No extrusions under current settings."
 msgstr "No extrusions under current settings."
+
+msgid ""
+"Smooth mode of timelapse is not supported when \"by object\" sequence is "
+"enabled."
+msgstr ""
 
 msgid ""
 "Please select \"By object\" print sequence to print multiple objects in "
