--- a/bbl/i18n/hu/BambuStudio_hu.po
+++ b/bbl/i18n/hu/BambuStudio_hu.po
@@ -2,7 +2,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Bambu Studio\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2022-09-14 12:48+0800\n"
+"POT-Creation-Date: 2022-09-14 17:04+0800\n"
 "PO-Revision-Date: \n"
 "Last-Translator: \n"
 "Language-Team: \n"
@@ -688,11 +688,17 @@ msgstr "Model javítása"
 msgid "Export as STL"
 msgstr "Exportálás STL-ként"
 
-msgid "Reload item"
-msgstr "Tárgy újbóli betöltése"
+msgid "Reload from disk"
+msgstr ""
 
-msgid "Reload items"
-msgstr "Tárgyak újbóli betöltése"
+msgid "Reload the selected parts from disk"
+msgstr ""
+
+msgid "Replace with STL"
+msgstr ""
+
+msgid "Replace the selected part with new STL"
+msgstr ""
 
 msgid "Change filament"
 msgstr "Filament csere"
@@ -3078,6 +3084,15 @@ msgstr ""
 msgid "Object too small"
 msgstr "Object too small"
 
+msgid ""
+"This file contains several objects positioned at multiple heights.\n"
+"Instead of considering them as multiple objects, should \n"
+"the file be loaded as a single object having multiple parts?"
+msgstr ""
+
+msgid "Multi-part object detected"
+msgstr ""
+
 msgid "Load these files as a single object with multiple parts?\n"
 msgstr "Load these files as a single object with multiple parts?\n"
 
@@ -3106,6 +3121,15 @@ msgstr "The selected object couldn't be split."
 
 msgid "Another export job is running."
 msgstr "Egy másik exportálási feladat is fut."
+
+msgid "Select a new file"
+msgstr ""
+
+msgid "File for the replace wasn't selected"
+msgstr ""
+
+msgid "Error during replace"
+msgstr ""
 
 msgid "Please select a file"
 msgstr "Kérjük, válassz egy fájlt"
@@ -4782,6 +4806,11 @@ msgstr ""
 
 msgid "No extrusions under current settings."
 msgstr "No extrusions under current settings."
+
+msgid ""
+"Smooth mode of timelapse is not supported when \"by object\" sequence is "
+"enabled."
+msgstr ""
 
 msgid ""
 "Please select \"By object\" print sequence to print multiple objects in "
